generic/apps/test/deployment_demo_v2.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: demo1
  labels:
    name: demo1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: 
    kubernetes.io/change-cause: 'Release 1.29.1 - supi dupi'
  name: default-backend
  namespace: demo1
  labels:
    app: default-backend
spec:
  selector:
    matchLabels:
      app: default-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
      - name: default-backend
        image: nginx:1.29.1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-file
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: index-file
        configMap:
          name: default-backend
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo1
  name: default-backend-svc
spec:
  selector:
    app: default-backend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-hello
  namespace: demo1
  labels:
    app: hello-world-hello
spec:
  selector:
    matchLabels:
      app: hello-world-hello
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world-hello
    spec:
      containers:
      - name: hello-world-hello
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-file
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: index-file
        configMap:
          name: index-hello
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo1
  name: hello-world-hello-svc
spec:
  selector:
    app: hello-world-hello
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-moin
  namespace: demo1
  labels:
    app: hello-world-moin
spec:
  selector:
    matchLabels:
      app: hello-world-moin
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world-moin
    spec:
      containers:
      - name: hello-world-moin
        image: nginx:1.24.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-file
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: index-file
        configMap:
          name: index-moin
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo1
  name: hello-world-moin-svc
spec:
  selector:
    app: hello-world-moin
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: demo1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  defaultBackend:
    service:
      name: default-backend-svc
      port:
        number: 80
  rules:
    - host: www.hs.local
      http:
        paths:
        - path: /hello
          pathType: Prefix
          backend:
            service:
              name: hello-world-hello-svc
              port:
                number: 80
        - path: /moin
          pathType: Prefix
          backend:
            service:
              name: hello-world-moin-svc
              port:
                number: 80
